--- a/.env
+++ b/.env
@@ -1,8 +1,5 @@
-DB_USER=root
-DB_PASSWORD=root
-DB_HOST=localhost
-
-#Usually 3306.
-DB_PORT=3307
-
-DB_NAME=group23db
+DB_NAME="group23db"
+DB_USER="root"
+DB_PASS="root"
+DB_HOST="localhost"
+DB_PORT="3307"
